--- a/replacement.yml
+++ b/replacement.yml
@@ -173,5 +173,79 @@ verb:
   - flabbergasting
 
 verb-past:
-  - helped
-  - rocked
+  - abdicated
+  - absconded
+  - acclaimed
+  - acclimatised
+  - adducted
+  - adjourned
+  - adjudicated
+  - admonished
+  - adsorbed
+  - advantaged
+  - allegorised
+  - allowanced
+  - alloyed
+  - alphabetized
+  - altercated
+  - ambushed
+  - amortised
+  - amputated
+  - asphyxiated
+  - atomised
+  - avowed
+  - bemoaned
+  - berated
+  - beseeched
+  - bewailed
+  - bewitched
+  - blabbed
+  - bleared
+  - bleeped
+  - bloodsucked
+  - blooped
+  - blubbered
+  - boggled
+  - chimed
+  - clacked
+  - clamored
+  - clanged
+  - cleaved
+  - clomped
+  - cobbled
+  - coddled
+  - coifed
+  - colored
+  - commiserated
+  - communed
+  - computerised
+  - conjugated
+  - consigned
+  - disunited
+  - divebombed
+  - divined
+  - doddered
+  - dogfighted
+  - doodled
+  - doomsayed
+  - dumbfoundered
+  - earsplitted
+  - earthshook
+  - electrocuted
+  - elucidated
+  - emaciated
+  - embellished
+  - embezzled
+  - emotionalized
+  - ensnarled
+  - entrenched
+  - excommunicated
+  - exhumed
+  - falsified
+  - fanaticized
+  - farted
+  - fatigued
+  - fictionalised
+  - filched
+  - finagled
+  - flabbergasted
