--- a/blacklist.yml
+++ b/blacklist.yml
@@ -9,8 +9,10 @@ asshole: noun
 assholes: noun-plural
 "ass hole": noun
 "ass holes": noun-plural
-"ass load": noun
 assload: noun
+asshat: noun
+asshead: noun
+half-assed: adjective
 
 bastard: noun
 bastards: noun-plural
@@ -20,6 +22,8 @@ bitch: noun
 bitches: verb-present
 bitching: verb
 bitchy: adjective
+sumbitches: noun-plural
+"sum bitches": noun-plural
 
 fuck: exclaim
 "fuck it": exclaim
@@ -33,9 +37,13 @@ fucks: verb-present
 motherfucker: noun
 "mother fuckers": noun-plural
 motherfuckers: noun-plural
+motherfucking: adjective
 
 hell: noun
 
+bullshitting: verb
+apeshit: adjective
+shitstorm: noun
 shit: noun
 shits: verb-present
 shitty: adjective
@@ -46,6 +54,8 @@ shitload: noun
 "shit load": noun
 bullshit: noun
 "bull shit": noun
+shitcom: noun
+dipshit: noun
 
 "damn it": exclaim
 damn: adverb
@@ -53,6 +63,7 @@ damns: verb-present
 damned: adjective
 damnable: adjective
 damning: adjective
+goddamn: adjective
 
 aclit: other
 adick: other
