--- a/blacklist.yml
+++ b/blacklist.yml
@@ -47,15 +47,28 @@ shitstorm: noun
 shit: noun
 shits: verb-present
 shitty: adjective
+shittiest: adjective
+shitless: adjective
 shitted: verb-past
 shitting: verb
 shithead: noun
+shitheads: noun-plural
+shithole: noun
+shitholes: noun-plural
+shitshow: noun
+shitshows: noun-plural
+shitbrain: noun
+shitbrains: noun-plural
+shitgobler: noun
+shitgoblers: noun-plural
 shitload: noun
+shitloads: noun-plural
 "shit load": noun
 bullshit: noun
 "bull shit": noun
 shitcom: noun
 dipshit: noun
+bloodyshit: exclaim
 
 "damn it": exclaim
 damn: adverb
