--- a/blacklist.yml
+++ b/blacklist.yml
@@ -59,8 +59,8 @@ shitshow: noun
 shitshows: noun-plural
 shitbrain: noun
 shitbrains: noun-plural
-shitgobler: noun
-shitgoblers: noun-plural
+shitgobbler: noun
+shitgobblers: noun-plural
 shitload: noun
 shitloads: noun-plural
 "shit load": noun
